--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,29 +1,4 @@
-.home{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.counter{
-    font-size: 2rem;
-    color: tomato;
-    font-weight: bold;
-}
-.buttons{
-    padding: 2rem;
-    display: flex;
-    flex-direction: row;
-}
-button{
-    background-color: transparent;
-    border: 1px solid black;
-    padding: 1rem;
-    font-size: 1.4rem;
-    cursor: pointer;
-    margin: 10px;
-    transition: all .1s ease-in-out;
-}
-button:hover{
-    color: white;
-    background: black;
+html{
+    width: 100%;
+    height: 100%;
 }
