--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+html{
+    height: 100%;
+}
+body{
+    height: 100%;
+    margin: 0;
+}
+button{
+    background-color: transparent;
+    border: 1px solid black;
+    padding: 1rem;
+    font-size: 1.4rem;
+    cursor: pointer;
+    margin: 10px;
+    transition: all .1s ease-in-out;
+}
+button:hover{
+    color: white;
+    background: black;
+}
