Estado centralizado concluído, faltando aprender a lidar com effects

--- a/src/app/authentication/sign-up/sign-up.component.html
+++ b/src/app/authentication/sign-up/sign-up.component.html
@@ -2,10 +2,10 @@
     <form (submit)="submit($event);">
         <h2>Sign-up for recover your previous state</h2>
         <div class="form-input">
-            <input type="email" placeholder="Email" [(ngModel)]="email">
+            <input type="email" placeholder="Email" [(ngModel)]="email" name="email">
         </div>        
         <div class="form-input">
-            <input type="password" placeholder="Password" [(ngModel)]="password">
+            <input type="password" placeholder="Password" [(ngModel)]="password" name="password">
         </div>
         <button>Sign-up</button> 
     </form>
