--- a/src/app/counter-feature/counter/counter.component.css
+++ b/src/app/counter-feature/counter/counter.component.css
@@ -14,3 +14,13 @@
     display: flex;
     flex-direction: row;
 }
+.loading, .loading span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loading span{
+    color: tomato;
+    font-size: 2rem;
+    margin: 10px;
+}
