--- a/src/app/counter-feature/counter/counter.component.html
+++ b/src/app/counter-feature/counter/counter.component.html
@@ -4,7 +4,20 @@
         Counter: {{ count$ |async }}
     </div>
     <div class="buttons">
-        <button [routerLink]="['/sign-up']">Sign-Up</button>
+        <div *ngIf="(autenticated$ | async); else loading">
+            <button (click)="saveState();">Save your state</button>
+            <button (click)="logout();">Sign out</button>
+        </div>
+        
+        <ng-template #loading>
+            <div class="loading" *ngIf="(autenticated$ | async) == undefined; else notAuthenticated">
+                <span>Loading auth status...</span>
+            </div>
+            <ng-template #notAuthenticated>
+                <button [routerLink]="['/sign-up']">Sign-Up for save state</button>
+                <button [routerLink]="['/sign-in']">Sign-In for recover state</button>
+            </ng-template>
+        </ng-template>
         <button (click)="incrementHandler();">Increment counter</button>
         <button (click)="decrementHandler();">Decrement counter</button>
     </div>
