--- a/src/app/authentication/sign-in/sign-in.component.html
+++ b/src/app/authentication/sign-in/sign-in.component.html
@@ -3,13 +3,14 @@
         <h2>Sign in to recover your last state</h2>
         <div class="form-input">
             <input type="email" required placeholder="Email" [(ngModel)]="email" name="email">
-        </div>        
+        </div>
         <div class="form-input">
             <input type="password" required placeholder="Password" [(ngModel)]="password" name="password">
         </div>
-        <div *ngIf="showError">
-            <h3>{{error}}</h3>
+        <h5 *ngIf="authenticationEffects.loading">Loading...</h5>
+        <div *ngIf="(loginFailure$ | async) as failure">
+            <h3>{{failure.error}}</h3>
         </div>
-        <button>Sign-in</button> 
+        <button>Sign-in</button>
     </form>
 </div>
